--- a/HTML-files/payments.html
+++ b/HTML-files/payments.html
@@ -103,7 +103,7 @@
                 </div>
                 <div class="inputBox">
                     <span>Name On Card:</span>
-                    <input type="text" placeholder="Mr. Steve Smith" name="full name" id="name" maxlength="30" pattern="[A-Za-z]*" required title="Please enter only letters (A-Z or a-z)">
+                    <input type="text" placeholder="Mr. Steve Smith" name="full name" id="name" maxlength="30" pattern="[A-Za-z]+(\s[A-Za-z]+)?" required title="Please enter only letters (A-Z or a-z) with an optional space between names">
                 </div>
 
                 <div class="inputBox">
@@ -121,7 +121,7 @@
                     </div>
                     <div class="inputBox">
                         <span>CVV :</span>
-                        <input type="text" id="cvv" name="cvv" placeholder="123" maxlength="3" pattern="[0-9]+" required title="Please enter a 3-digit number (e.g., 123)">
+                        <input type="text" id="cvv" name="cvv" placeholder="123" maxlength="3" pattern="[0-9]{3}" required title="Please enter a 3-digit number (e.g., 123)">
                     </div>
                 </div>
 
